src/objects/SR_Intake_Needs_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Psychiatric_Diagnosis_Information__c</fullName>
        <label>Psychiatric Diagnosis Information</label>
        <picklist>
            <picklistValues>
                <fullName>Schizophrenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiety Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schizoaffective Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsessive-Compulsive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Polar Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Traumatic Stress Disorder (PTSD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other learning disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_Address__c</fullName>
        <label>Psychiatrist address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_Agency__c</fullName>
        <label>Psychiatrist Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatrist_Phone__c</fullName>
        <label>Psyciatrist phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psychiatrist__c</fullName>
        <label>Psychiatrist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_to_Client_Other__c</fullName>
        <label>Relation to Client (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_to_client__c</fullName>
        <label>Relation to Client</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt/Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girl/Boy Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reliable_Access_Clothing__c</fullName>
        <inlineHelpText>Do you have reliable access to clean clothing?</inlineHelpText>
        <label>Reliable Access to clean clothing</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reliable_Access_Food__c</fullName>
        <inlineHelpText>Do you have reliable access to Food?</inlineHelpText>
        <label>Reliable Access to food</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Overdose_Details__c</fullName>
        <label>SA Risk Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Substances_Used__c</fullName>
        <inlineHelpText>Substances used</inlineHelpText>
        <label>Substances used</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Treatment_Details__c</fullName>
        <inlineHelpText>Details</inlineHelpText>
        <label>SA Treatment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_caused_legal_problems__c</fullName>
        <description>Has drugs/alcohol use caused legal problems?</description>
        <label>Drugs/alcohol caused legal problems?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_in_treatment__c</fullName>
        <description>Are you in treatment or support for drugs/alcohol?</description>
        <label>Treatment for drugs/alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_looking_for_support__c</fullName>
        <description>Looking for support with drugs/alcohol use?</description>
        <label>Looking for support?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_overdose__c</fullName>
        <description>Ever overdosed?At risk of overdose?</description>
        <label>Overdosed? At risk?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_satisfied_with_support__c</fullName>
        <description>Satisfied with support for substance abuse?</description>
        <label>Satisfied with support?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfied_with_psych__c</fullName>
        <description>Are you satisfied with your psychiatrist?</description>
        <label>Satisfied with psychiatrist?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfied_with_therapist__c</fullName>
        <description>Are you satisfied with your therapist?</description>
        <label>Satisfied with therapist?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Address__c</fullName>
        <label>Secondary Contact Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Name__c</fullName>
        <label>Secondary Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone__c</fullName>
        <label>Secondary Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Relationship__c</fullName>
        <label>Secondary Contact Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoke_cigarettes__c</fullName>
        <description>Do you smoke cigarettes?</description>
        <label>Smoke cigarettes?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State Text</label>
        <picklist>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_needed_for_medical_issues__c</fullName>
        <inlineHelpText>Does the client have any medical conditions that they might need support for?</inlineHelpText>
        <label>Support needed for medical issues</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taking_Meds_for_MH__c</fullName>
        <description>Are you taking medications for mental health?</description>
        <label>Taking meds for mental health issues</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapist_Address__c</fullName>
        <label>Therapist address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapist_Agency__c</fullName>
        <label>Therapist Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapist_Phone__c</fullName>
        <label>Therapist phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapist__c</fullName>
        <label>Therapist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SR Intake Needs Assessment</label>
    <listViews>
        <fullName>aggFact</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>aggFact</label>
    </listViews>
    <nameField>
        <displayFormat>SR-NA{0000}</displayFormat>
        <label>SR Intake Needs Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Intake Needs Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>